--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ nav a {
 h1 {
     color: steelblue;
 }
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
@@ -18,5 +18,26 @@ img {
     box-shadow: 0 0 30px grey;
 }
 p {
-    padding: 10px;
+    padding: 0;
+}
+main {
+    max-width: 840px;
+}
+aside {
+    width: 25rem;
+    margin: 20px;
+    border: 2px solid rgba(0,0,0,0,0.3);
+    padding: 20px;
+    background-color: #eeeeee;
+    color: #000000;
+    text-align: center;
+}
+aside img{
+    width: 200px;
+    height: auto;
+}
+footer {
+    margin-top: 1rem;
+    border-top: 2px solid #000000;
+    text-align: center;
 }
