--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,8 @@
+:root {
+    --heading-background-color: steelblue;
+    --heading-text-colour: #000000;
+
+}
 nav {
     background-color: steelblue;
     padding: 10px;
