--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,7 +66,7 @@ aside {
     text-align: center;
 }
 aside h2 {
-    position: relative;
-    top: 30px;
-    left: 8px;
+    position: absolute;
+    bottom: 30px;
+    left: 11rem;
 }
