--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,11 +62,13 @@ footer {
     color: #000;
 }
 aside {
+    position: relative;
     width: 25rem;
     text-align: center;
+
 }
 aside h2 {
     position: absolute;
-    bottom: 30px;
-    left: 11rem;
+    top: 30px;
+    left: 10rem;
 }
