--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -6,6 +6,21 @@
     --accent-colour-3: #F3F3F4; 
 } 
 
+.oswald-text {
+  font-family: "Oswald", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src:url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvgUE.ttf) format('truetype');
+}
+.montserrat-text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUFjIg1_i6t8kCHKm459Wx7xQYXK0vOoz6jq6R9aX8.ttf) format('truetype');
+}
+
 * { 
     margin: 0; 
     padding: 0; 
