--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -8,15 +8,16 @@
 
 .oswald-text {
   font-family: "Oswald", system-ui;
+  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  src:url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvgUE.ttf) format('truetype');
 }
+
 .montserrat-text {
   font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUFjIg1_i6t8kCHKm459Wx7xQYXK0vOoz6jq6R9aX8.ttf) format('truetype');
 }
 
 * { 
