--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -11,6 +11,7 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  src: url(https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap);
 }
 
 .montserrat-text {
@@ -18,6 +19,7 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  src: url(https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap);
 }
 
 * { 
@@ -39,7 +41,6 @@ position: relative;
 
 header { 
     font-family: "Oswald", sans-serif; 
-    font-optical-sizing: auto; 
     font-weight: 400; 
     font-style: normal; 
     background-color: var(--primary-colour); 
@@ -90,7 +91,6 @@ main {
     max-width: 100%; 
     background-color: var(--secondary-colour);
     font-family: "Montserrat", sans-serif; 
-    font-optical-sizing: auto; 
     font-weight: 400; 
     font-style: normal; 
 } 
