--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -8,7 +8,6 @@
 
 .oswald-text {
   font-family: "Oswald", system-ui;
-  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   src: url(https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap);
@@ -16,7 +15,6 @@
 
 .montserrat-text {
   font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   src: url(https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap);
@@ -36,7 +34,7 @@ header {
     font-style: normal; 
     display: block; 
     width: 100%; 
-    height: auto;
+    height: 12rem;
     background-color: var(--primary-colour);
     border: 2px solid var(--secondary-colour);
     text-decoration: none var(--accent-colour-1);
@@ -46,7 +44,6 @@ header {
 
 nav { 
     background-color: var(--primary-colour); 
-    padding: 10px; 
     color: var(--accent-colour-1);
 } 
 
@@ -59,15 +56,14 @@ nav a {
 h1 { 
     color: var(--accent-colour-2);
     display: block;
-    width: 30rem;
+    width: 100%;
     height: 10%;
-    top: 10rem;
-    left: 40rem;
+    top: 16rem;
     position: absolute;
+    text-align: center;
 } 
 
 nav {
-    position: absolute;
     width: 100%;
     height: 20rem;
 }
@@ -78,13 +74,13 @@ nav {
     width:100%; 
     height:auto;
     position: relative; 
-    fit
+    object-fit: cover;
     } 
 
 p { 
-    padding: 0; 
+    padding: 2rem; 
     display: block; 
-    width: 20rem;
+    width: 100%;
     text-align: left;
 } 
 
@@ -104,30 +100,29 @@ main img {
     padding: 2px;
     box-shadow: 0 0 30px var(--accent-colour-1);
     position:relative;
-    left: 2rem;
 }
  
 
 article { 
     display: block; 
-    width: 10rem; 
-    height: 4rem;
+    width: 40rem; 
+    height: auto;
     background-color: var(--primary-colour); 
     border: 2px solid var(--secondary-colour); 
-    color: var(--accent-colour-2); 
-    margin: 20px; 
+    color: var(--accent-colour-2);
+    text-align: center;
     position: absolute;
-    top: 10rem;
+    top: 25rem;
+    left: 30%;
 
 } 
 
+
 article img {
-    display: block; 
-    width: 30px; 
-    height: auto; 
-    border: 1px solid var(--secondary-colour);  
-    float: right;
-    position: right float;
+    width: 150px;
+    height: 150px;
+    border: 1px solid var(--secondary-colour);
+    padding: 2px;
     
 }
 
