--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,97 +1,85 @@
-:root { 
-    --primary-colour: #14110F; 
-    --secondary-colour: #34312D; 
-    --accent-colour-1: #7E7F83; 
-    --accent-colour-2: #D9C5B2; 
-    --accent-colour-3: #F3F3F4; 
-} 
-
-.oswald-text {
-  font-family: "Oswald", system-ui;
-  font-weight: 400;
-  font-style: normal;
-  src: url(https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap);
+:root {
+    --primary-colour: #14110F;
+    --secondary-colour: #34312D;
+    --accent-colour-1: #7E7F83;
+    --accent-colour-2: #D9C5B2;
+    --accent-colour-3: #F3F3F4;
 }
 
-.montserrat-text {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  src: url(https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-* { 
-    margin: 0; 
-    padding: 0; 
-    box-sizing: border-box; 
-} 
+body {
+    font-family: "Montserrat", sans-serif;
+}
 
- 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Oswald", sans-serif;
+}
 
-header { 
-    font-family: "Oswald", sans-serif; 
-    font-weight: 400; 
-    font-style: normal; 
-    display: block; 
-    width: 100%; 
+header {
+    display: block;
+    width: 100%;
     height: 12rem;
     background-color: var(--primary-colour);
     border: 2px solid var(--secondary-colour);
     text-decoration: none var(--accent-colour-1);
-    
 
-} 
 
-nav { 
-    background-color: var(--primary-colour); 
+}
+
+nav {
+    background-color: var(--primary-colour);
     color: var(--accent-colour-1);
-} 
+}
 
-nav a { 
-    color: var(--accent-colour-1); 
+nav a {
+    color: var(--accent-colour-1);
     text-decoration: none;
     background-color: var(--primary-colour);
-} 
+}
 
-h1 { 
+.hero {
+    position: relative;
+}
+.hero h1 {
     color: var(--accent-colour-2);
     display: block;
     width: 100%;
-    height: 10%;
-    top: 16rem;
+    top: 10%;
     position: absolute;
     text-align: center;
-} 
-
-nav {
-    width: 100%;
-    height: 20rem;
 }
 
 
-.hero img { 
-    display:block; 
-    width:100%; 
-    height:auto;
-    position: relative; 
+.hero img {
+    display: block;
+    width: 100%;
+    height: auto;
+    position: relative;
     object-fit: cover;
-    } 
+}
 
-p { 
-    padding: 2rem; 
-    display: block; 
+p {
+    padding: 2rem;
+    display: block;
     width: 100%;
     text-align: left;
-} 
+}
 
-main { 
-    width: 100%; 
+main {
+    width: 100%;
     background-color: var(--primary-colour);
     color: var(--accent-colour-2);
-    font-family: "Montserrat", sans-serif; 
-    font-weight: 400; 
-    font-style: normal; 
-} 
+}
 
 main img {
     width: 60%;
@@ -99,41 +87,37 @@ main img {
     border: 1px solid var(--heading-background-color);
     padding: 2px;
     box-shadow: 0 0 30px var(--accent-colour-1);
-    position:relative;
+    position: relative;
 }
- 
 
-article { 
-    display: block; 
-    width: 40rem; 
+
+article {
+    display: block;
+    width: 40rem;
     height: auto;
-    background-color: var(--primary-colour); 
-    border: 2px solid var(--secondary-colour); 
+    background-color: var(--primary-colour);
+    border: 2px solid var(--secondary-colour);
     color: var(--accent-colour-2);
     text-align: center;
     position: absolute;
     top: 25rem;
     left: 30%;
 
-} 
+}
 
 
-article img {
+.hero article img {
     width: 150px;
     height: 150px;
     border: 1px solid var(--secondary-colour);
-    padding: 2px;
-    
+    padding: 16px;
+    float: right;
 }
 
-footer { 
-    margin-top: 1rem; 
-    border-top: 2px solid var(--heading-text-colour); 
+footer {
+    margin-top: 1rem;
+    border-top: 2px solid var(--heading-text-colour);
     text-align: left;
     background-color: var(--primary-colour);
     border: 2px solid var(--secondary-colour);
-} 
-
- 
-
- 
+}
