--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -6,6 +6,10 @@
     --accent-colour-3: #F3F3F4;
 }
 
+html {
+    background-color: var(--primary-colour);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -14,6 +18,7 @@
 
 body {
     font-family: "Montserrat", sans-serif;
+    color: var(--accent-colour-2);
 }
 
 h1,
@@ -23,22 +28,49 @@ h4,
 h5,
 h6 {
     font-family: "Oswald", sans-serif;
+    color: var(--accent-colour-1);
 }
 
 header {
-    display: block;
-    width: 100%;
-    height: 12rem;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    margin: 1rem auto;
+    align-items: center;
     background-color: var(--primary-colour);
     border: 2px solid var(--secondary-colour);
     text-decoration: none var(--accent-colour-1);
 
+}
 
+header img {
+	width: 120px;
+	height: auto;
 }
 
 nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     background-color: var(--primary-colour);
     color: var(--accent-colour-1);
+}
+
+header nav a:hover {
+    text-decoration: underline;
+}
+
+.navigation {
+	display: flex;
+    color: var(--accent-colour-1);
+	text-decoration: none;
+    list-style: none;
+}
+
+
+.navigation a {
+    display: block;
+    padding: 20px;
+    text-decoration: none;
 }
 
 nav a {
@@ -50,6 +82,7 @@ nav a {
 .hero {
     position: relative;
 }
+
 .hero h1 {
     color: var(--accent-colour-2);
     display: block;
@@ -107,11 +140,51 @@ article {
 
 
 .hero article img {
-    width: 150px;
-    height: 150px;
+    width: 300px;
+    height: auto;
     border: 1px solid var(--secondary-colour);
     padding: 16px;
     float: right;
+}
+
+section h2 {
+    display: grid;
+    justify-items: center;
+    margin: 20px;
+}
+
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    text-align: center;
+    flex-wrap: wrap;
+}
+
+.container p {
+    display: block;
+    max-width: 33%;
+    text-align: center;
+}
+
+.container img {
+    width: 33%;
+    height: auto;
+    border: 1px solid var(--secondary-colour);
+    padding: 16px;
+}
+
+.figs {
+display: flex;
+flex-direction: row;
+justify-items: center;
+max-width: 100%;
+}
+
+.figs figure img {
+    max-width: 1fr;
+    height: auto;
 }
 
 footer {
@@ -120,4 +193,14 @@ footer {
     text-align: left;
     background-color: var(--primary-colour);
     border: 2px solid var(--secondary-colour);
+    display: flex;
+    flex-direction: row;
+    align-items: left;
 }
+
+footer nav {
+    display: block;
+    margin: 10px;
+}
+
+
