--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -6,13 +6,12 @@
     --accent-colour-3: #F3F3F4;
 }
 
-html {
+body {
     background-color: var(--primary-colour);
 }
 
 * {
-    margin: 0;
-    padding: 0;
+
     box-sizing: border-box;
 }
 
@@ -20,7 +19,9 @@ body {
     font-family: "Montserrat", sans-serif;
     color: var(--accent-colour-2);
 }
-
+a {
+    text-decoration: none;
+}
 h1,
 h2,
 h3,
@@ -31,51 +32,57 @@ h6 {
     color: var(--accent-colour-1);
 }
 
+header,
+main,
+footer {
+    max-width: 1400px;
+    margin: 0 auto;
+}
+
 header {
     display: grid;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: 200px auto;
     margin: 1rem auto;
     align-items: center;
     background-color: var(--primary-colour);
     border: 2px solid var(--secondary-colour);
-    text-decoration: none var(--accent-colour-1);
-
+    align-items: center;
 }
 
 header img {
-	width: 120px;
-	height: auto;
+    width: 120px;
+    height: auto;
+    justify-self: center;
 }
 
-nav {
+/* nav { 
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     background-color: var(--primary-colour);
     color: var(--accent-colour-1);
-}
+} */
 
-header nav a:hover {
+.navigation a:hover {
     text-decoration: underline;
 }
 
 .navigation {
-	display: flex;
+    display: flex;
     color: var(--accent-colour-1);
-	text-decoration: none;
-    list-style: none;
+    justify-content: space-around;
 }
 
 
 .navigation a {
     display: block;
     padding: 20px;
-    text-decoration: none;
+
 }
 
 nav a {
     color: var(--accent-colour-1);
-    text-decoration: none;
+
     background-color: var(--primary-colour);
 }
 
@@ -104,7 +111,7 @@ nav a {
 p {
     padding: 2rem;
     display: block;
-    width: 100%;
+    /* width: 100%; */
     text-align: left;
 }
 
@@ -153,6 +160,140 @@ section h2 {
     margin: 20px;
 }
 
+.contact main{
+    display: grid; 
+    grid-template-columns: 200px auto;
+    width: 100%; 
+    justify-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+
+.contact main #team{
+    display: grid;
+    grid-template-columns: 200px auto;
+    width: 90%;
+    justify-items: center;
+}
+
+.contact #emp {
+    display: grid; 
+    width: 90%;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    justify-items: center;
+}
+
+.contact #emp img {
+    width: auto;
+    height: 150px;
+}
+
+.contact #emp figcaption {
+    text-align: center;
+    font-weight: bold;
+    font-weight: bold;
+}
+
+.contact #contact_info {
+    display: grid;
+    width: 50%; 
+    grid-template-columns: 1fr auto;
+    grid-row-start: 1;
+}
+
+.contact #contact_info aside {
+    display: grid;
+}
+
+.contact #contact_info #frame {
+    display: grid;
+    justify-self: right;
+    width: 50%;  
+}
+
+.contact #contact_info iframe {
+    height: 350px;
+    justify-self: right;
+}
+
+.contact #frame div {
+    position: relative;
+    bottom: 37px;
+    font-weight: bold;
+    opacity: .8;
+    text-align: center;
+    width: 87%;
+    z-index: 1;
+    font-size: 20px; 
+    font-family: var(--heading-font);
+}
+
+.contact #frame p a {
+    text-align: center;
+}
+
+.contact main #user_form {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-self: center;
+    margin-bottom: 100px;  
+}
+
+.contact main #user_form form {
+    width: 600px;
+    background-color: #eeeeee;
+    border: 2px solid var(--secondary-colour);
+    color: black;
+    border-radius: 10px;
+}
+.contact #user_form h2{
+    text-align: center;
+}
+
+.contact #user_form p {
+    margin: 20px;
+}
+.contact #user_form .move_in {
+    margin-left: 20px;
+}
+
+.contact #user_form .text_input {
+    width: 100%;
+    height: 50px;
+    border-radius: 50px;
+    padding: 10px;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 2px solid var(--secondary-colour);
+}
+
+.contact #user_form textarea {
+ width: 100%; 
+ min-height: 100px;
+}
+
+.contact #user_form #button{
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+}
+.contact #user_form button {
+    width: 300px; 
+    border-radius: 100px;
+    height: 50px;
+    letter-spacing: 5px;
+    justify-content: center;
+    background-color: var(--accent2-color);
+    font-weight: bold;
+    border: 1px solid var(--accent2-color);
+}
+.contact #user_form button:hover {
+    cursor: pointer;
+}
+
 
 .container {
     display: flex;
@@ -176,10 +317,10 @@ section h2 {
 }
 
 .figs {
-display: flex;
-flex-direction: row;
-justify-items: center;
-max-width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    max-width: 100%;
 }
 
 .figs figure img {
@@ -193,14 +334,19 @@ footer {
     text-align: left;
     background-color: var(--primary-colour);
     border: 2px solid var(--secondary-colour);
-    display: flex;
-    flex-direction: row;
-    align-items: left;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    align-items: center;
 }
 
 footer nav {
     display: block;
     margin: 10px;
+    align-self: end;
+    grid-column: 3;
+    justify-self: end;
 }
 
-
+.wireframe {
+    color: var(--accent-colour-2);
+}
